WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
146134
Fullscreen view should not update bounds of video when in PiP.
https://bugs.webkit.org/show_bug.cgi?id=146134
Summary
Fullscreen view should not update bounds of video when in PiP.
Jeremy Jones
Reported
2015-06-18 20:52:10 PDT
Fullscreen view should not update bounds of video when in PiP.
Attachments
Patch
(1.68 KB, patch)
2015-06-18 20:58 PDT
,
Jeremy Jones
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Jeremy Jones
Comment 1
2015-06-18 20:58:26 PDT
Created
attachment 255166
[details]
Patch
Jeremy Jones
Comment 2
2015-06-18 20:58:53 PDT
rdar://problem/21012692
Darin Adler
Comment 3
2015-06-19 11:24:23 PDT
Comment on
attachment 255166
[details]
Patch Any way to make a regression test for this?
Jeremy Jones
Comment 4
2015-06-19 11:36:54 PDT
(In reply to
comment #3
)
> Comment on
attachment 255166
[details]
> Patch > > Any way to make a regression test for this?
I don't know of a way to make tests for layers outside of the DOM.
WebKit Commit Bot
Comment 5
2015-06-19 12:11:51 PDT
Comment on
attachment 255166
[details]
Patch Clearing flags on attachment: 255166 Committed
r185761
: <
http://trac.webkit.org/changeset/185761
>
WebKit Commit Bot
Comment 6
2015-06-19 12:11:54 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug