Fullscreen view should not update bounds of video when in PiP. https://bugs.webkit.org/show_bug.cgi?id=146134

Patch by Jeremy Jones <jeremyj@apple.com> on 2015-06-19
Reviewed by Darin Adler.

Don't update bounds on video layer when it is not a child.

* platform/ios/WebVideoFullscreenInterfaceAVKit.mm:
(-[WebAVVideoLayer setBounds:]):

Canonical link: https://commits.webkit.org/164204@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@185761 268f45cc-cd09-0410-ab3c-d52691b4dbfc